relations und friends_requests updated